# algorithm_manager

src/algorithm_manager/: CMakeLists.txt  package.xml
src/algorithm_manager/scripts/: algorithm_manager_node.py
src/image_publisher/: CMakeLists.txt  package.xml
src/image_publisher/scripts/: image_pub.py
src/image_publisher/src/: image_pub.cpp
src/infer/: CMakeLists.txt  package.xml
src/infer/src/: detect_trt.cpp  main.cpp
src/infer/workspace/: build.sh
src/test/: CMakeLists.txt  package.xml
src/test/scripts/: set_param.py  test_image_sub.py
src/yolov8/: CMakeLists.txt  package.xml
src/yolov8/msg/: Box.msg  keypoint.msg  pose.msg  yolo.msg
src/yolov8/scripts/: detect-1-4.py  detect.py  pose.py
src/yolov8/ultralytics/engine/: predictor.py
